--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!--[if IE 8 ]><html class="no-js ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 8)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
+	<script data-ad-client="ca-pub-4922357801627417" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
    <!--- Basic Page Needs
    ================================================== -->
