--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>My Blog</title>
+	<title>Ceevee Web Design</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -37,9 +37,6 @@
    <!-- Header
    ================================================== -->
    <header id="home">
-      <div class="right">
-         
-      </div>
 
       <nav id="nav-wrap">
 
@@ -51,27 +48,27 @@
             <li><a class="smoothscroll" href="#about">About</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Quotes</a></li>
+            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
 
       <div class="row banner">
+         
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Nfon Andrew</h1>
             <h3>I'm a  <span>Blogger</span>, <span>Software Engineer</span> and <span>webdesigner</span> creating awesome and
             effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
-            and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
+            and learn more <a class="smoothscroll" href="#about">about me</a></h3>
             <hr />
             <ul class="social">
                <li><a href="https://web.facebook.com/nfon.andrew.71"><i class="fa fa-facebook"></i></a></li>
                <li><a href="https://twitter.com/nfonandrew73"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://github.com/andrew21-mch"><i class="fa fa-github"></i></a></li>
                <li><a href="mailto:nfonandrew73@gmail.com"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="https://www.linkedin.com/in/nfon-andrew-7703a11a0/"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
             </ul>
          </div>
       </div>
@@ -291,12 +288,12 @@
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand php"></span><em>Php</em></li>
-                  <li><span class="bar-expand python"></span><em>Python</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
+					   <li><span class="bar-expand php"></span><em>Php/Laravel</em></li>
+                  <li><span class="bar-expand python"></span><em>Python/Django</em></li>
 						<li><span class="bar-expand css"></span><em>CSS</em></li>
 						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
                   <li><span class="bar-expand sql"></span><em>SQL</em></li>
+                  <li><span class="bar-expand bash__C"></span><em>System Admin</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
