--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee Web Design</title>
+	<title>Andrew | Profile</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
