--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
     <section id="skills" class="skills section-bg">
       <div class="container">
         <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="nfon-andrew-7703a11a0" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://cm.linkedin.com/in/nfon-andrew-7703a11a0?trk=profile-badge">Nfon Andrew</a></div>
+              
 
         <div class="section-title">
           <h2>Skills</h2>
