--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
-        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>              
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="nfon-andrew-7703a11a0" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://cm.linkedin.com/in/nfon-andrew-7703a11a0?trk=profile-badge">Nfon Andrew</a></div>
+              
 
         <div class="section-title">
           <h2>Skills</h2>
@@ -456,7 +458,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="nfon-andrew-7703a11a0" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://cm.linkedin.com/in/nfon-andrew-7703a11a0?trk=profile-badge">Nfon Andrew</a></div>
+                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
