--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I learn everyday to be up to task with growing technology.</p>
         </div>
 
         <div class="row no-gutters">
@@ -278,7 +278,7 @@
               <p><em>National Higher Polytechnic Institute, Bamenda, CMR</em></p>
               <p>Provide thorough hands-on training so that graduates are field-ready and immediately effective on the job.</p>
             </div>
-            <div class="resume-item">
+            <!--<div class="resume-item">
               <h4>Bachelor Engineering &amp; Software</h4>
               <h5>2019 - 2023</h5>
               <p><em>National Higher Polytechnic Institute, Bamenda, CMR</em></p>
@@ -290,7 +290,7 @@
               <p><em>African Leadership Academy, Nairobi, KNY</em></p>
               <p>ALX is Africa's top training in leadership and career development for (future) young leaders</p>
 
-         </div>
+         </div> -->
             <div class="resume-item">
               <h4>Google IT support Proffessional Certification</h4>
               <h5>2021 - 2022</h5>
@@ -341,7 +341,7 @@
             </div>
             <div class="resume-item">
               <h4>physics Teacher</h4>
-              <h5>2020 - Present</h5>
+              <h5>2020 - 2021t</h5>
               <p><em>StFreMEC, Bamenda, CMR </em></p>
               <ul>
                 <li>Well-versed in tailoring Practical physics to enhance students’ skill attainment and creative development.</li>
