--- a/index.html
+++ b/index.html
@@ -272,18 +272,18 @@
             </div>
 
             <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
+            <!--<div class="resume-item">
               <h4>Master Computer Engineering &amp; Software</h4>
-              <h5>2019 - 2024</h5>
+              <h5>2019 - 2022</h5>
               <p><em>National Higher Polytechnic Institute, Bamenda, CMR</em></p>
               <p>Provide thorough hands-on training so that graduates are field-ready and immediately effective on the job.</p>
-            </div>
+            </div> -->
             <!--<div class="resume-item">
               <h4>Bachelor Engineering &amp; Software</h4>
               <h5>2019 - 2023</h5>
               <p><em>National Higher Polytechnic Institute, Bamenda, CMR</em></p>
               <p>Provide thorough hands-on training so that graduates are field-ready and immediately effective on the job.</p>
-            </div>
+            </div>-->
             <div class="resume-item">
               <h4>Software Engineering Certification &amp; Software</h4>
               <h5>2021 - 2023</h5>
