--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </div>
 
             <h3 class="resume-title">Education</h3>
-            <!--<div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Master Computer Engineering &amp; Software</h4>
               <h5>2019 - 2022</h5>
               <p><em>National Higher Polytechnic Institute, Bamenda, CMR</em></p>
@@ -280,17 +280,19 @@
             </div> -->
             <!--<div class="resume-item">
               <h4>Bachelor Engineering &amp; Software</h4>
-              <h5>2019 - 2023</h5>
+              <h5>2019 - 2022</h5>
               <p><em>National Higher Polytechnic Institute, Bamenda, CMR</em></p>
               <p>Provide thorough hands-on training so that graduates are field-ready and immediately effective on the job.</p>
-            </div>-->
+            </div> -->
             <div class="resume-item">
               <h4>Software Engineering Certification &amp; Software</h4>
-              <h5>2021 - 2023</h5>
+              <h5>2021 - 2022</h5>
               <p><em>African Leadership Academy, Nairobi, KNY</em></p>
               <p>ALX is Africa's top training in leadership and career development for (future) young leaders</p>
 
-         </div> -->
+         </div>
+
+
             <div class="resume-item">
               <h4>Google IT support Proffessional Certification</h4>
               <h5>2021 - 2022</h5>
@@ -302,7 +304,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Head of Department for Web and App</h4>
-              <h5>2019 - Present</h5>
+              <h5>2019 - 2021</h5>
               <p><em>FELJTECH, Douala, CMR </em></p>
               <ul>
                 <li>Lead in the development, and implementation of the Backend for App and Web Applications</li>
@@ -311,6 +313,15 @@
                 <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
               </ul>
             </div>
+
+          <div class="resume-item">
+              <h4>Software Developer &amp; Software</h4>
+              <h5>2021 - 2022</h5>
+              <p><em>OpenSource Cameroon</em></p>
+              <p>OSSCAMEROON is and open source community which aims at promoting Cameroonian 
+                OpenSource projects. We also aim providing internship for our young Cameroon </p>
+         </div>
+
             <div class="resume-item">
               <h4>Director of IT</h4>
               <h5>2021 - Present</h5>
