--- a/index.html
+++ b/index.html
@@ -932,14 +932,7 @@
             <footer id="footer">
                 <div class="container">
                     <div class="copyright">
-                        &copy; Skye8 <strong><span>Portfolio</span></strong>
-                    </div>
-                    <div class="credits">
-                        <!-- All the links in the footer should remain intact. -->
-                        <!-- You can delete the links only if you purchased the pro version. -->
-                        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-                        Designed by <a href="https://skye8.tech/">Skye8</a>
+                        &copy; copyright <strong><span>2023</span></strong>
                     </div>
                 </div>
             </footer><!-- End  Footer -->
