--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                                 <div class="col-lg-6">
                                     <ul>
                                         <li><i class="bi bi-chevron-right"></i>
-                                            <strong>Age:</strong> <span>22</span></li>
+                                            <strong>Age:</strong> <span>24</span></li>
                                         <li><i class="bi bi-chevron-right"></i>
-                                            <strong>Degree:</strong> <span>Master</span>
+                                            <strong>Degree:</strong> <span>Bachellor of Engineering</span>
                                         </li>
                                         <li><i class="bi bi-chevron-right"></i>
                                             <strong>Email:</strong>
